<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/total_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="412dp"
        android:layout_marginTop="8dp"
        android:text="@string/percentage_value"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        style="@style/Margins"
        android:layout_marginTop="36dp"
        android:text="@string/what_is"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_textview" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Margins"
        android:layout_marginTop="8dp"
        android:text="@string/of"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/number_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentage_textview"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/number_textview"
        style="@style/Margins"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percentage_textview" />

    <EditText
        android:id="@+id/percentage_textview"
        style="@style/Margins"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_percentage"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        style="@style/Margins"
        android:layout_marginTop="36dp"
        android:background="@color/colorAccent"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_textview"
        app:layout_constraintVertical_bias="0.627" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Margins"
        android:layout_marginTop="8dp"
        android:text="@string/percent"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/percentage_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/show_percent_radiobutton"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/number_textview"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <RadioButton
            android:id="@+id/add_radiobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to"
            android:textAlignment="center"/>

        <RadioButton
            android:id="@+id/subtract_radiobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/subtract_from"
            android:textAlignment="center"/>

        <RadioButton
            android:id="@+id/show_percent_radiobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/show_percent"
            android:textAlignment="center"/>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>